# bevy-adg

./: .gitignore  Cargo.toml  README.md
game/: Cargo.toml
game/src/: entity.rs  goal.rs  lib.rs  math.rs  random.rs  stages.rs  states.rs
game/src/components/: common.rs  health.rs  mod.rs  player.rs
game/src/components/asteroid/: builder.rs  generate.rs  level.rs  mod.rs
game/src/components/engine/: mod.rs  rotation.rs
game/src/components/engine/linear/: mainengine.rs  mod.rs  swayengine.rs
game/src/components/movement/: mod.rs
game/src/components/particle/: fire.rs  generator.rs  mathcolor.rs  mod.rs  propulsion.rs
game/src/components/ship/: mod.rs  simple.rs
game/src/components/ship/control/: effects.rs  mod.rs  rotation.rs
game/src/components/ui/: button.rs  mod.rs  progressbar.rs
game/src/components/weapon/: machinegun.rs  mod.rs
game/src/components/weapon/projectile/: bullet.rs  mod.rs
game/src/plugins/: asteroid.rs  background.rs  despawn.rs  goal.rs  healthdisplay.rs  hud.rs  ingame.rs  living.rs  mod.rs  particle.rs  pause.rs  physics.rs  player.rs  respawn.rs  ship.rs  weapon.rs
physic-objects/: Cargo.toml
physic-objects/src/: area.rs  circle.rs  lib.rs  plugin.rs  triangle.rs  trianglefan.rs
