[package]
name = "game"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "game"

[features]
debug = ["debug_hp"]
debug_hp = []

[dependencies]
bevy = "0.9"
bevy-parallax = { git = "https://github.com/Corrosive-Games/bevy-parallax.git", version = "0.3" }
bevy_prototype_lyon = "0.7"
bevy_rapier2d = "0.20"
bitflags = "1.3.2"
derive_builder = "0.12.0"
physic-objects = { path = "../physic-objects"}
pid = "4.0.0"
rand = "0.8.5"
statrs = "0.16.0"
