[package]
name = "game"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "game"

[features]
debug = ["debug_hp"]
debug_hp = []

[dependencies]
bevy-parallax = { git = "https://github.com/Corrosive-Games/bevy-parallax.git", version = "0.5" }
bevy_prototype_lyon = "0.8"
bevy_rapier2d = "0.21"
derive_builder = "0.12.0"
physic-objects = { path = "../physic-objects" }
pid = "4.0.0"
rand = "0.8.5"
statrs = "0.16.0"

[dependencies.bevy]
version = "0.10"
features = ["x11", "wayland"]
